fix: adjust left position of border for improved alignment

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -57,7 +57,7 @@
   border: 0 solid #000;
   content: "";
   height: 195px;
-  left: -75px;
+  left: -85px;
   opacity: 0.8;
   position: absolute;
   top: -25px;
